2019-07-22  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h [__USE_MISC]: Include
	<linux/sockios.h>.

2019-07-18  Florian Weimer  <fweimer@redhat.com>

	* scripts/build-many-glibcs.py (Context.checkout): Default to
	Linux 5.2.

2019-07-18  Florian Weimer  <fweimer@redhat.com>

	[BZ #24532]
	Linux: Use in-tree copy of SO_ constants for !__USE_MISC.
	* sysdeps/unix/sysv/linux/Makefile [$(subdir) == socket]
	(sysdep_headers): Add bits/socket-constants.h.
	(tests-special): Add tst-socket-consts.out.
	(tst-socket-consts.out): New target.
	* sysdeps/unix/sysv/linux/bits/socket.h: Remove macro tracking
	around <asm/unistd.h>.
	[__USE_MISC]: Include <bits/types/time_t.h> before <asm/socket.h>.
	[!__USE_MISC]: Include <sys/socket-constants.h> instead of
	<asm/socket.h>.
	* sysdeps/unix/sysv/linux/bits/tst-socket-consts.py: New file.
	* sysdeps/unix/sysv/linux/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/alpha/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/hppa/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/mips/bits/socket-constants.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/socket-constants.h:
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/socket-constants.h: Likewise.

2019-07-20  Florian Weimer  <fweimer@redhat.com>

	* scripts/glibcextract.py (compute_c_consts): Print source code on
	compiler failure.

2019-07-20  Egor Kobylkin  <egor@kobylkin.com>

	[BZ #2872]
	* locale/C-translit.h.in: Add Cyrillic transliteration.

2019-07-19  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/syscall-names.list: Add system calls
	from Linux 5.2.
	(fsconfig): Add system call name.
	(fsmount): Likewise.
	(fsopen): Likewise.
	(fspick): Likewise.
	(move_mount): Likewise.
	(open_tree): Likewise.

2019-07-18  Carlos O'Donell  <carlos@redhat.com>

	* po/libc.pot: Regenerate.

2019-07-18  Mike Crowe  <mac@mcrowe.com>

	* sysdeps/unix/sysv/linux/hppa/pthread.h: Add declarations of